--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -45,17 +45,27 @@ ul {
   clear: both;
   padding-top: 0.5em; }
 
+.notice, .alert {
+  position: absolute;
+  margin: auto;
+  left: 50%;
+  margin-left: -200px;
+  width: 400px;
+  top: 10px;
+  text-align: center;
+}
+
 .notice, .alert, .form_errors {
   border: 1px solid green;
-  padding: 5px;
-  margin: 5px;
+  padding: 8px;
   display: block;
   background-color: #ccffcc;
   font-weight: bold; }
 
 .alert, .form_errors {
   border-color: red;
-  background-color: #ffcccc; }
+  background-color: #ffcccc; 
+}
 
 .field_with_errors {
   display: inline; }
